# Vibe-BI

./: .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  start-dev.cmd  tsconfig.base.json
agents/langgraph_sidecar/: pyproject.toml
agents/langgraph_sidecar/src/vibe_bi_agent/: __init__.py  design_rules.py  graph.py  main.py  models.py  provider.py  selfcheck.py  semantic_summary.py  validators.py
artifacts/parity-fixtures/: README.md  build-browser-preview-payload.mjs  run-parity-smoke.mjs  serve-browser-preview.mjs  shipping-parity-degraded-generic-cards.json  shipping-parity-golden.json  verify-parity-fixtures.mjs
server/src/: VibeBi.slnx
server/src/VibeBi.AI/: VibeBi.AI.csproj
server/src/VibeBi.AI/Orchestration/: ReportGenerator.cs
server/src/VibeBi.AI/Providers/: ClaudeProvider.cs  IAIProvider.cs
server/src/VibeBi.Api/: Program.cs  VibeBi.Api.csproj
server/src/VibeBi.Api/Controllers/: AiController.cs  ModelController.cs  QueryController.cs  ReportController.cs
server/src/VibeBi.Core/: VibeBi.Core.csproj
server/src/VibeBi.Core/Models/: ModelMetadata.cs  ReportDefinition.cs
server/src/VibeBi.Core/Services/: DaxExecutionService.cs  ModelMetadataService.cs  ReportFileService.cs
tools/: validate_parity_fixtures.py
