[project]
name = "vibe-bi-langgraph-agent"
version = "0.1.0"
description = "LangGraph sidecar agent for Vibe BI desktop"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "typing-extensions>=4.12.0,<5.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
